<resources>
    <string name="app_name">EuriskoApp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="user">User</string>
    <string name="admin">admin</string>
    <string name="remember_me">Remember me</string>
    <string name="timer">Timer</string>
    <string name="list">List</string>
    <string name="logout">Logout</string>
    <string name="send_notification">Send Notification</string>
    <string name="optional">Optional</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Start">start</string>
    <string name="reset">Reset</string>
    <string name="Pause">pause</string>

</resources>
