<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/timer"
            android:title="@string/timer" />

        <item
            android:id="@+id/list"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/list" />
        <item
            android:id="@+id/gallery"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_gallery" />
    </group>

    <item android:title="@string/optional">
        <menu>
            <item
                android:id="@+id/logout"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/logout" />
            <item
                android:id="@+id/notification"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/send_notification" />
        </menu>
    </item>

</menu>
